--- a/redux-recipe/src/App.css
+++ b/redux-recipe/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+*{
+  border:0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sideBarNotVisible{
+
+  width: 40%;
+  height: 100vh;
+  background-color: red;
+  transition: width 6s;
+  visibility: hidden;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sideBarVisible{
+
+  width: 20%;
+  height: 100vh;
+  background-color: black;
+  transition:all 4s ease;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* .sideBarVisible:hover{
+
+  width: 100%;
+  height: 100vh;
+  background-color: red;
+  transition-duration:  6s;
+
+} */
+
+.navBar{
+  background-color: black;
 }
 
-.App-link {
-  color: #61dafb;
+.hamburgerV{
+  width: 50px;
+  padding: 10px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hamburgerNV{
+  width: 50px;
+  padding: 10px;
+  visibility: hidden;
+}
+
+.bar1, .bar2, .bar3 {
+  width: auto;
+  height: 5px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
